Add real terminal resize parity